<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/speakButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/speak" />
    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text"
        android:textSize="32dp"/>

    <Button
        android:id="@+id/chineseButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/chinese" />

    <Button
        android:id="@+id/englishButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="@string/english" />

    <Button
        android:id="@+id/spanishButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="@string/spanish" />


</LinearLayout>
